<resources>
    <string name="app_name">Sinogramas</string>
    <string name="welcome">Bienvenido!</string>
    <string name="start_app">Comenzar</string>
    <string-array name="instructions_data_structure_selection">
        <item>Oprima la letra correspondiente:</item>
        <item>Seleccione la estructura a utilizar.</item>
        <item>«a» arbol; «c» cola; «l» lista; «p» pila;</item>
        <item>Seleccione la implementación</item>
        <item>«a» arreglos; «r» referencias</item>
    </string-array>
    <string name="add_all_elements">Añadir todos los elementos</string>
    <string name="add_one_element">Añadir un elemento</string>
    <string name="delete_all_elements">Eliminar todos los elementos</string>
    <string name="delete_one_element">Eliminar un elemento</string>
    <string name="show_length">Mostrar la longitud</string>
</resources>